--- a/locales/de/json.json
+++ b/locales/de/json.json
@@ -41,8 +41,8 @@
     "Expand": "Expandieren",
     "Expand All": "Alle erweitern",
     "Explanation": "Erläuterung",
-    "Export": "Export",
-    "Export :name": "Export :name",
+    "Export": "Exportieren",
+    "Export :name": ":name exportieren",
     "File": "Datei",
     "Files": "Dateien",
     "Go Home": "Nach Hause gehen",
@@ -103,7 +103,7 @@
     "Unsubscribe": "Abbestellen",
     "Up": "Hoch",
     "Update": "Aktualisieren",
-    "Update :name": "Update :name",
+    "Update :name": ":name aktualisieren",
     "User": "Benutzer",
     "View": "Sicht",
     "View :name": "Ansicht :name",
